// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enroll Password Authenticator Transformer Tests should add title, and password enrollment elements to UI Schema for enroll PW step with missing password policy settings 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": Object {
      "step": "enroll-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.password.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "passwordMatchesValidation",
        "options": Object {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Password Authenticator Transformer Tests should add title, password requirements and password enrollment elements to UI Schema for enroll PW step 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": Object {
      "step": "enroll-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.password.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [
            Object {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": Object {
            "complexity": Object {
              "minLength": 1,
            },
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "passwordMatchesValidation",
        "options": Object {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Password Authenticator Transformer Tests should add title, password requirements and password enrollment elements to UI Schema for enroll PW step when passcode field name is newPassword 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "credentials.newPassword": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": Object {
      "step": "enroll-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.password.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [
            Object {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": Object {
            "complexity": Object {
              "minLength": 1,
            },
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.newPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "passwordMatchesValidation",
        "options": Object {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Password Authenticator Transformer Tests should add title, password requirements and revoke sessions checkbox elements to UI Schema for enroll PW step 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": Object {
      "step": "enroll-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.password.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [
            Object {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": Object {
            "complexity": Object {
              "minLength": 1,
            },
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "passwordMatchesValidation",
        "options": Object {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      Object {
        "label": "Sign me out of all devices",
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.revokeSessions",
            "type": "boolean",
          },
        },
        "type": "Field",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
